xxs xs breakpoints, fix first section mobile responsiveness

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,10 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  
+  /* Custom breakpoints */
+  --breakpoint-xxs: 400px;
+  --breakpoint-xs: 460px;
 }
 
 @media (prefers-color-scheme: dark) {
